# ZeroBrave

./: .gitignore  CHANGELOG.md  README.md  TODO.md  policies.json  pyproject.toml
src/: main.py  tui.py
tests/: test_main.py  test_tui.py
