[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerobrave"
version = "1.1.2"
description = "Privacy-focused policy configurator for Brave Browser"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "rompelhd"}
]
keywords = ["brave", "browser", "privacy", "policies", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/rompelhd/ZeroBrave"
Repository = "https://github.com/rompelhd/ZeroBrave"
Issues = "https://github.com/rompelhd/ZeroBrave/issues"

[project.scripts]
zerobrave = "zerobrave.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["zerobrave*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
